// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/theme should contain default Box theme 1`] = `
Object {
  "base": Object {
    "background": "#fff",
    "backgroundActive": "#e8e8e8",
    "backgroundHover": "#f4f4f4",
    "border": "#bcbcbc",
    "borderActive": "#bcbcbc",
    "borderHover": "#bcbcbc",
    "buttonBackground": "#fff",
    "buttonBackgroundActive": "#e8e8e8",
    "buttonBackgroundHover": "#f4f4f4",
    "buttonBorder": "#bcbcbc",
    "buttonBorderActive": "#bcbcbc",
    "buttonBorderHover": "#bcbcbc",
    "buttonForeground": "#000",
    "foreground": "#222",
  },
  "modes": Object {
    "admin": Object {},
    "dark": Object {},
  },
  "primary": Object {
    "background": "#0061d5",
    "backgroundActive": "#0049A0",
    "backgroundHover": "#006FF3",
    "border": "#0061d5",
    "borderActive": "#0049A0",
    "borderHover": "#006FF3",
    "buttonBackground": "#0061d5",
    "buttonBackgroundActive": "#0049A0",
    "buttonBackgroundHover": "#006FF3",
    "buttonBorder": "#0061d5",
    "buttonBorderActive": "#0049A0",
    "buttonBorderHover": "#006FF3",
    "buttonForeground": "#fff",
    "foreground": "#fff",
  },
}
`;

exports[`components/theme should generate accessible palette for dark primary 1`] = `
Object {
  "primary": Object {
    "background": "#000000",
    "backgroundActive": "#404040",
    "backgroundHover": "#1A1A1A",
    "border": "#000000",
    "borderActive": "#404040",
    "borderHover": "#1A1A1A",
    "buttonBackground": "#000000",
    "buttonBackgroundActive": "#404040",
    "buttonBackgroundHover": "#1A1A1A",
    "buttonBorder": "#000000",
    "buttonBorderActive": "#404040",
    "buttonBorderHover": "#1A1A1A",
    "buttonForeground": "#fff",
    "foreground": "#fff",
  },
}
`;

exports[`components/theme should generate accessible palette for light primary 1`] = `
Object {
  "primary": Object {
    "background": "#ffffff",
    "backgroundActive": "#BFBFBF",
    "backgroundHover": "#E6E6E6",
    "border": "#BFBFBF",
    "borderActive": "#BFBFBF",
    "borderHover": "#E6E6E6",
    "buttonBackground": "#222",
    "buttonBackgroundActive": "#767676",
    "buttonBackgroundHover": "#4e4e4e",
    "buttonBorder": "#222",
    "buttonBorderActive": "#767676",
    "buttonBorderHover": "#4e4e4e",
    "buttonForeground": "#fff",
    "foreground": "#000",
  },
}
`;

exports[`components/theme should generate accessible palette for midtone grey 1`] = `
Object {
  "primary": Object {
    "background": "#6A6C6E",
    "backgroundActive": "#505153",
    "backgroundHover": "#5F6163",
    "border": "#6A6C6E",
    "borderActive": "#505153",
    "borderHover": "#5F6163",
    "buttonBackground": "#6A6C6E",
    "buttonBackgroundActive": "#505153",
    "buttonBackgroundHover": "#5F6163",
    "buttonBorder": "#6A6C6E",
    "buttonBorderActive": "#505153",
    "buttonBorderHover": "#5F6163",
    "buttonForeground": "#fff",
    "foreground": "#fff",
  },
}
`;

exports[`components/theme should generate box brand colors 1`] = `
Object {
  "primary": Object {
    "background": "#0061d5",
    "backgroundActive": "#0049A0",
    "backgroundHover": "#006FF3",
    "border": "#0061d5",
    "borderActive": "#0049A0",
    "borderHover": "#006FF3",
    "buttonBackground": "#0061d5",
    "buttonBackgroundActive": "#0049A0",
    "buttonBackgroundHover": "#006FF3",
    "buttonBorder": "#0061d5",
    "buttonBorderActive": "#0049A0",
    "buttonBorderHover": "#006FF3",
    "buttonForeground": "#fff",
    "foreground": "#fff",
  },
}
`;

exports[`components/theme should generate box brand colors and merge into base theme 1`] = `
Object {
  "base": Object {
    "background": "#fff",
    "backgroundActive": "#e8e8e8",
    "backgroundHover": "#f4f4f4",
    "border": "#bcbcbc",
    "borderActive": "#bcbcbc",
    "borderHover": "#bcbcbc",
    "buttonBackground": "#fff",
    "buttonBackgroundActive": "#e8e8e8",
    "buttonBackgroundHover": "#f4f4f4",
    "buttonBorder": "#bcbcbc",
    "buttonBorderActive": "#bcbcbc",
    "buttonBorderHover": "#bcbcbc",
    "buttonForeground": "#000",
    "foreground": "#222",
  },
  "modes": Object {
    "admin": Object {},
    "dark": Object {},
  },
  "primary": Object {
    "background": "#0061d5",
    "backgroundActive": "#0049A0",
    "backgroundHover": "#006FF3",
    "border": "#0061d5",
    "borderActive": "#0049A0",
    "borderHover": "#006FF3",
    "buttonBackground": "#0061d5",
    "buttonBackgroundActive": "#0049A0",
    "buttonBackgroundHover": "#006FF3",
    "buttonBorder": "#0061d5",
    "buttonBorderActive": "#0049A0",
    "buttonBorderHover": "#006FF3",
    "buttonForeground": "#fff",
    "foreground": "#fff",
  },
}
`;
